--- a/components/TeamPage/tp.module.css
+++ b/components/TeamPage/tp.module.css
@@ -20,7 +20,7 @@
 }
 
 .team_section {
-  width: 100vw;
+  width: 100%;
   height: auto;
   display: flex;
   justify-content: flex-start;
